Updated App.css file
- Added css for input field
- Added css for table row action buttons

--- a/02-hooks/src/App.css
+++ b/02-hooks/src/App.css
@@ -40,3 +40,16 @@
 .read-the-docs {
   color: #888;
 }
+
+input.add-todo {
+  padding: 10px;
+  margin-inline-end: 10px;
+}
+
+button.as-link {
+  background: none !important;
+  border: none;
+  padding: 0 !important;
+  text-decoration: underline;
+  cursor: pointer;
+}
